--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,4 @@
 @import 'elements/navbar';
 @import 'elements/buttons';
 @import 'elements/transitions';
+@import url("https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700");
